# server/src/db/dataSource.ts
@@ -1,10 +1,12 @@
 import 'reflect-metadata';
+import 'dotenv/config';
 import { DataSource } from 'typeorm';
 import { Recipe } from '../entities/entities/Recipe';
 import { RecipeEmbedding } from '../entities/entities/RecipeEmbedding';
 import { Region } from '../entities/entities/Region';
 import { Settlement } from '../entities/entities/Settlement';
 import { SpatialRefSys } from '../entities/entities/SpatialRefSys';
+import { Category } from '../entities/entities/Category';
 
 export const AppDataSource = new DataSource({
   type: 'postgres',
@@ -12,8 +14,8 @@ export const AppDataSource = new DataSource({
   ssl: process.env.DB_SSL === 'true' ? { rejectUnauthorized: false } : undefined,
   synchronize: false,
   logging: false,
-  entities: [Recipe, RecipeEmbedding, Region, Settlement, SpatialRefSys],
-  migrations: [],
+  entities: [Recipe, RecipeEmbedding, Region, Settlement, SpatialRefSys, Category],
+  migrations: ["src/db/migrations/*{.ts,.js}"],
 });
 
 export async function getDataSource(): Promise<DataSource> {
@@ -22,3 +24,4 @@ export async function getDataSource(): Promise<DataSource> {
   }
   return AppDataSource;
 }
+
