# server/src/routes/index.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 import { MapController } from '../controllers/MapController';
 import { testConnection } from '../config/db';
+import { RecipeController } from '../controllers/RecipeController';
 
 export const router = Router();
 
@@ -10,4 +11,5 @@ router.get('/health', async (_req, res) => {
 });
 
 router.use('/maps', MapController);
+router.use('/recipes', RecipeController);
 
